--- a/public/locales/fr/fr.json
+++ b/public/locales/fr/fr.json
@@ -1,165 +1,222 @@
 {
   "loadingText": "Chargement...",
-  "aboutMeShort": "Je suis un professionnel polyvalent avec une expérience étendue allant du développement frontend à la coordination des réunions d'entreprise. De mes débuts en tant que développeur frontend à mes rôles actuels dans la gestion des événements d'entreprise, mon parcours professionnel a été une expérience d'apprentissage constant et d'adaptation agile aux défis changeants du monde du travail.",
-    "typeAnimation": {
-      "sequence": [
-        "Développeur Frontend",
-        2000,
-        "Spécialiste en Assemblage",
-        2000,
-        "Assistant Administratif",
-        2000,
-        "Coordinateur de Réunions d'Entreprise",
-        2000,
-        "Concepteur Web",
-        2000,
-        "Développeur Wordpress",
-        1000
-      ],
-      "speed": 45
-    },
-    "aboutMeTitle": "À propos de moi",
-    "aboutMeDescription": "Je suis un professionnel polyvalent avec une expérience étendue allant du développement frontend à la coordination des réunions d'entreprise. Ma fascination pour la technologie et ma passion pour la résolution de problèmes m'ont poussé à explorer différents domaines de connaissance et à développer des compétences interdisciplinaires. Au fil des années, j'ai eu l'opportunité de travailler sur des projets stimulants qui m'ont permis d'acquérir une compréhension approfondie de l'intersection entre la technologie, la gestion d'entreprise et le service client.",
-    "SkillsTitle": "Compétences",
-    "SkillsTitleWeb": "Web conception",
-    "SkillsTitleHardware": "Matériel",
-    "SkillsTitleAssistant": "Assistant",
-    "SkillWebList": {
-      "skill": [
-        "HTML",
-        "CSS",
-        "Javascript",
-        "Bootstrap",
-        "Tailwind",
-        "SASS",
-        "Figma",
-        "Photoshop",
-        "Illustrator",
-        "SEO",
-        "Git",
-        "Github",
-        "Wordpress",
-        "Shopify"
-        ]
+  "aboutMeShort": "Je suis un professionnel polyvalent avec une vaste expérience allant du développement frontend à la coordination de réunions d'affaires. Dès mes débuts en tant que développeur frontend jusqu'à mes rôles actuels dans la gestion d'événements d'affaires, mon parcours professionnel a été marqué par un apprentissage constant et une adaptation agile aux défis changeants du lieu de travail.",
+  "imA": "Je suis un",
+  "typeAnimation": {
+    "sequence": [
+      "Développeur Frontend",
+      2000,
+      "Spécialiste en Assemblage",
+      2000,
+      "Assistant Administratif",
+      2000,
+      "Coordinateur de Réunions d'Affaires",
+      2000,
+      "Designer Web",
+      2000,
+      "Développeur WordPress",
+      2000,
+      "Spécialiste en Marketing Digital",
+      1000
+    ],
+    "speed": 45
+  },
+  "aboutMeTitle": "À propos de moi",
+  "aboutMeDescription": "Je suis un professionnel polyvalent avec une vaste expérience allant du développement frontend à la coordination de réunions d'affaires. Ma fascination pour la technologie et ma passion pour la résolution de problèmes m'ont poussé à explorer différents domaines de connaissance et à développer des compétences interdisciplinaires. Au fil des années, j'ai eu l'opportunité de travailler sur des projets stimulants qui m'ont permis d'acquérir une compréhension approfondie de l'intersection entre la technologie, la gestion d'entreprise et le service client.",
+  "SkillsTitle": "Compétences",
+  "SkillsTitleWeb": "Conception Web",
+  "SkillsTitleHardware": "Matériel",
+  "SkillsTitleAssistant": "Assistant",
+  "SkillsTitleMarketing": "Marketing",
+  "SkillWebList": {
+    "skill": [
+      "HTML",
+      "CSS",
+      "Javascript",
+      "Bootstrap",
+      "Tailwind",
+      "SASS",
+      "Figma",
+      "Photoshop",
+      "Illustrator",
+      "Git",
+      "Github",
+      "Wordpress",
+      "Shopify"
+    ]
   },
   "SkillHardwareList": {
     "skill": [
       {
-        "id":"PCAssembly",        
+        "id": "PCAssembly",
         "name": "Assemblage de PC"
       },
       {
-        "id":"PeripheralSetup",        
+        "id": "PeripheralSetup",
         "name": "Configuration des Périphériques"
       },
       {
-        "id":"HardwareSecurity",        
-        "name": "Sécurité du Matériel"
+        "id": "UPSManagement",
+        "name": "Gestion des Onduleurs"
       },
       {
-        "id":"NetworkConnectivity",        
-        "name": "Connectivité Réseau"
-      },
-      {
-        "id":"UPSManagement",        
-        "name": "Gestion des UPS"
-      },
-      {
-        "id":"BIOSConfiguration",        
+        "id": "BIOSConfiguration",
         "name": "Configuration du BIOS"
       },
       {
-        "id":"DataStorage",        
-        "name": "Stockage de Données"
+        "id": "DataStorage",
+        "name": "Stockage des Données"
       },
       {
-        "id":"SystemTroubleshooting",        
-        "name": "Dépannage du Système"
+        "id": "SystemTroubleshooting",
+        "name": "Dépannage Systémique"
       },
       {
-        "id":"RemoteAssistance",        
+        "id": "HardwareSecurity",
+        "name": "Sécurité Matérielle"
+      },
+      {
+        "id": "NetworkConnectivity",
+        "name": "Connectivité Réseau"
+      },
+      {
+        "id": "RemoteAssistance",
         "name": "Assistance à Distance"
       },
       {
         "id": "OptimizationPerformance",
-        "name": "Optimisation et performance"
+        "name": "Optimisation et Performance"
       }
     ]
   },
   "SkillAssistantList": {
     "skill": [
       {
-        "id":"Word",
+        "id": "Word",
         "name": "Word"
       },
       {
-        "id":"Excel",
+        "id": "Excel",
         "name": "Excel"
       },
       {
-        "id":"PowerPoint",
-        "name": "Powerpoint"
+        "id": "PowerPoint",
+        "name": "PowerPoint"
       },
       {
-        "id":"Slack",
-        "name": "Slack"
-      },
-      {
-        "id":"Notion",
+        "id": "Notion",
         "name": "Notion"
       },
       {
-        "id":"TeamWorking",
-        "name": "Travail d'équipe"
+        "id": "Slack",
+        "name": "Slack"
       },
       {
-        "id":"ProyectManagment",
-        "name": "Gestion de projet"
+        "id": "TeamWorking",
+        "name": "Travail d'Équipe"
       },
       {
-        "id":"CustomerSupport",
-        "name": "Support client"
+        "id": "ProyectManagment",
+        "name": "Gestion de Projets"
       },
       {
-        "id":"ReportsStatus",
-        "name": "Rédaction de rapports"
+        "id": "CustomerSupport",
+        "name": "Support Client"
       },
       {
-        "id":"EmailManagment",
-        "name": "Gestion des e-mails"
+        "id": "ReportsStatus",
+        "name": "Rédaction de Rapports"
+      },
+      {
+        "id": "EmailManagment",
+        "name": "Gestion des E-mails"
+      }
+    ]
+  },
+  "SkillMarketingList": {
+    "skill": [
+      {
+        "id": "SEO",
+        "name": "SEO"
+      },
+      {
+        "id": "SEM",
+        "name": "SEM"
+      },
+      {
+        "id": "Content Marketing",
+        "name": "Marketing de Contenu"
+      },
+      {
+        "id": "Social Media Management",
+        "name": "Gestion des Réseaux Sociaux"
+      },
+      {
+        "id": "Email Marketing",
+        "name": "E-mail Marketing"
+      },
+      {
+        "id": "Google ADS",
+        "name": "Google ADS"
+      },
+      {
+        "id": "Meta Business Suite",
+        "name": "Meta Business Suite"
+      },
+      {
+        "id": "Copywriting",
+        "name": "Rédaction"
       }
     ]
   },
   "WorksList": {
     "works": [
       {
-        "id":"LutherAlien",
-        "overlay":"LutherAlienOverlay",
-        "video":"LutherAlienVideo",
+        "id": "LutherAlien",
+        "overlay": "LutherAlienOverlay",
+        "video": "LutherAlienVideo",
         "className": "luther-alien",
         "link": "https://scampt.github.io/LutherAlien/",
-        "linkGithub":"https://github.com/Scampt/LutherAlien"
+        "linkGithub": "https://github.com/Scampt/LutherAlien"
       },
       {
-        "id":"OddoLandingPage",
-        "overlay":"OddoLandingPageOverlay",
-        "video":"OddoLandingPageVideo",
+        "id": "OddoLandingPage",
+        "overlay": "OddoLandingPageOverlay",
+        "video": "OddoLandingPageVideo",
         "className": "oddo",
         "link": "https://scampt.github.io/oddo-test-website/",
         "linkGithub": "https://github.com/Scampt/oddo-test-website"
+      },
+      {
+        "id": "AHFJamaica",
+        "overlay": "AHFJamaicaOverlay",
+        "video": "AHFJamaicaVideo",
+        "className": "ahf-jamaica",
+        "link": "https://ahfmedicalcentre.org.jm/",
+        "linkGithub": ""
+      },
+      {
+        "id": "Pargon ISG",
+        "overlay": "ParagonISGOverlay",
+        "video": "ParagonISGVideo",
+        "className": "paragon-isg",
+        "link": "https://paragonisg.com/",
+        "linkGithub": ""
       }
     ]
   },
-  "worksTitle": "Mes derniers travaux",
-  "worksLinkWebiste": "Voir le site web",
+  "worksTitle": "Mes derniers projets",
+  "worksLinkWebiste": "Voir le site Web",
   "worksLinkGithub": "Voir sur Github",
-  "logoLutherAlienText": "Logo de LutherAlien",
-  "logoArmicatText": "Logo de Armicat",
-  "lutherTFTStoreText": "Hoodie de LutherTFT",
+  "logoLutherAlienText": "Logo LutherAlien",
+  "logoArmicatText": "Logo Armicat",
+  "lutherTFTStoreText": "Hoodie LutherTFT",
+  "TetosTruckingPrinted": "Design Tetos Trucking",
+  "TetosTruckingLogo": "Logo Tetos Trucking",
   "formTitle": "Contactez-moi",
   "formName": "Prénom(s)",
-  "formLastName": "Nom(s)",
-  "formEmail": "Courriel",
+  "formLastName": "Nom(s) de famille",
+  "formEmail": "E-mail",
   "formMessage": "Parlez-moi de votre situation",
   "formSubmit": "Envoyer",
   "contactForm": {
